fix bugs in on mobile layout

--- a/pages/posts/blog.module.css
+++ b/pages/posts/blog.module.css
@@ -85,11 +85,16 @@
 }
 
 .blog_body table {
-  width: 95%;
+  /* width: 95%; */
   margin: auto;
   font-size: 1.2em;
   font-weight: 300;
-  /* border: 1px solid white; */
+}
+
+@media screen and (max-width: 440px) {
+  .blog_body table {
+    font-size: 2vw;
+  }
 }
 
 .blog_body thead tr {
